[package]
name = "web"
version = "0.1.0"
edition = "2021"

[dependencies]
ahash = "0.8.3"
anyhow = "1.0.71"
brotli = "3.3.4"
crossbeam-channel = "0.5.8"
data-encoding = "2.4.0"
flate2 = "1.0.26"
grass = { version = "0.13.0", default-features = false }
jotdown = "0.3.0"
lightningcss = { version = "1.0.0-alpha.44", default-features = false, features = ["browserslist", "grid"] }
minify-html = "0.11.1"
minijinja = { version = "1.0.4", features = ["loader", "speedups"] }
minijinja-autoreload = "1.0.4"
notify = "6.0.1"
once_cell = "1.18.0"
quick-xml = { version = "0.29.0", features = ["serialize"] }
serde = { version = "1.0.166", features = ["derive"] }
sha1_smol = { version = "1.0.0", features = ["std"] }
time = { version = "0.3.22", features = ["serde-human-readable", "local-offset"] }
tiny_http = { version = "0.12.0", default-features = false }
toml = "0.7.6"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter", "time"] }
url = { version = "2.4.0", features = ["serde"] }
walkdir = "2.3.3"
