[package]
name = "web"
version = "0.1.0"
edition = "2021"

[dependencies]
ahash = "0.8.3"
anyhow = "1.0.72"
axum = { version = "0.6.20", features = ["ws"] }
brotli = "3.3.4"
flate2 = "1.0.26"
grass = { version = "0.13.1", default-features = false }
jotdown = "0.3.0"
lightningcss = { version = "1.0.0-alpha.44", default-features = false, features = ["browserslist", "grid"] }
md5 = "0.7.0"
minify-html = "0.11.1"
minijinja = { version = "1.0.5", features = ["loader", "speedups"] }
minijinja-autoreload = "1.0.5"
notify = "6.1.1"
once_cell = "1.18.0"
quick-xml = { version = "0.30.0", features = ["serialize"] }
serde = { version = "1.0.176", features = ["derive"] }
time = { version = "0.3.23", features = ["serde-human-readable", "local-offset"] }
tokio = { version = "1.32.0", features = ["full"] }
toml = "0.7.6"
tower-http = { version = "0.4.4", features = ["fs", "trace"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter", "time"] }
url = { version = "2.4.0", features = ["serde"] }
walkdir = "2.3.3"
