[package]
name = "web"
version = "0.1.0"
edition = "2021"

[dependencies]
ahash = "0.8.7"
anyhow = "1.0.79"
axum = { version = "0.7.4", features = ["ws"] }
brotli = "3.4.0"
flate2 = "1.0.28"
grass = { version = "0.13.1", default-features = false }
jotdown = "0.3.2"
lightningcss = { version = "1.0.0-alpha.52", default-features = false, features = ["browserslist", "grid"] }
minify-html = "0.15.0"
minijinja = { version = "1.0.12", features = ["loader", "speedups"] }
minijinja-autoreload = "1.0.12"
notify = "6.1.1"
once_cell = "1.19.0"
quick-xml = { version = "0.31.0", features = ["serialize"] }
serde = { version = "1.0.196", features = ["derive"] }
sha1_smol = { version = "1.0.0", features = ["std"] }
time = { version = "0.3.31", features = ["serde-human-readable", "local-offset"] }
tokio = { version = "1.35.1", features = ["full"] }
toml = "0.8.8"
tower-http = { version = "0.5.1", features = ["fs", "trace"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "time"] }
url = { version = "2.5.0", features = ["serde"] }
walkdir = "2.4.0"
